[package]
name = "rawbit"
authors = ["Carter J. Canedy <cartercanedy42@gmail.com>"]
description = "A camera RAW image preprocessor and importer"
categories = ["multimedia::encoding", "multimedia::images", "command-line-utilities"]
keywords = ["imaging", "photography", "camera-RAW", "RAW"]
license = "MIT"
repository = "https://github.com/cartercanedy/rawbit"
version = "0.1.15"
edition = "2024"
readme = "../README.md"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", default-features = false, features = ["std", "winapi"] }
clap = { version = "4.5.50", features = ["derive", "env", "string", "unicode"] }
futures = "0.3.31"
phf = { version = "0.13.1", features = ["macros"] }
rawler = "0.7.0"
rayon = "1.11.0"
smlog = "0.1.4"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "windows-sys"] }
zips = "0.1.7"

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "rawbit"
path = "src/main.rs"
